creusot/tests/should_fail/prusti/deref/send_back.stderr
error[creusot]: &'a u32@'curr cannot be moved to 'old since it didn't exist at that point
                required by function call
  --> send_back.rs:11:21
   |
11 | #[ensures(old(deref(result)) == old(deref(x)))]
   |                     ^^^^^^

error: aborting due to previous error

